<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".recruiter.profile.setting.RecruiterSettingFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_light_purple_blue"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingHorizontal="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_back_button"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/back_arrow_blue" />

                <TextView
                    style="@style/screen_title"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="@string/setting" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/civ_user"
                    style="@style/circular_image"
                    android:visibility="gone"
                     android:layout_alignParentEnd="true"
                    android:src="@drawable/default_user_img" />
            </RelativeLayout>
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:isScrollContainer="true"
            android:scrollbars="none"
            android:paddingBottom="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/relativeLayout">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="20dp">


                <TextView
                    android:id="@+id/tv_personal_info"
                    style="@style/title_regular"
                    android:background="@drawable/rounded_white_box"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginVertical="20dp"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="10dp"
                    android:drawableEnd="@drawable/ic_arrow_forward_grey"
                    android:text="@string/my_personal_information" />


                <TextView
                    android:layout_marginVertical="10dp"
                    style="@style/title_bold"
                    android:text="SÉCURITÉ"/>
                <TextView
                    android:id="@+id/tv_change_password"
                    style="@style/title_regular"
                    android:background="@drawable/rounded_white_box"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="10dp"
                    android:drawableEnd="@drawable/ic_arrow_forward_grey"
                    android:text="Mot de passe" />


                <TextView
                    style="@style/title_bold"
                    android:layout_marginVertical="10dp"
                    android:text="@string/notifications" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:background="@drawable/rounded_white_box"
                    android:layout_width="match_parent"
                    android:layout_height="40dp">

                    <TextView
                        style="@style/title_regular"
                        android:layout_width="0dp"
                        android:paddingHorizontal="10dp"
                        android:text="@string/push_notifications"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/sb_push_notification"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/sb_push_notification"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:track="@drawable/selector_switch_track"
                        android:thumb="@drawable/selector_switch_thumb"
                        />
                </androidx.constraintlayout.widget.ConstraintLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"/>

                <TextView
                    android:id="@+id/tv_newsletter"
                    style="@style/title_regular"
                    android:background="@drawable/rounded_white_box"
                    android:layout_width="match_parent"
                    android:paddingHorizontal="10dp"
                    android:drawableEnd="@drawable/ic_arrow_forward_grey"
                    android:layout_height="40dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center_vertical"
                    android:text="@string/newsletter" />


                <TextView
                    android:id="@+id/tv_share_jobamax"
                    style="@style/title_regular"
                    android:background="@drawable/rounded_white_box"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="20dp"
                    android:paddingHorizontal="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/share_jobamax" />


                <TextView
                    android:layout_marginVertical="10dp"
                    style="@style/title_bold"
                    android:text="Nous contacter" />

                <TextView
                    android:id="@+id/tv_faq"
                    style="@style/title_regular"
                    android:background="@drawable/rounded_white_box"
                    android:layout_width="match_parent"
                    android:paddingHorizontal="10dp"
                    android:layout_height="40dp"
                    android:gravity="center_vertical"
                    android:text="@string/help_and_support" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"/>

                <TextView
                    android:id="@+id/tv_email_us"
                    style="@style/title_regular"
                    android:background="@drawable/rounded_white_box"
                    android:paddingHorizontal="10dp"
                    android:layout_marginBottom="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center_vertical"
                    android:text="Nous envoyer un email" />

                <TextView
                    android:layout_marginVertical="10dp"
                    style="@style/title_bold"
                    android:text="@string/community" />

                <TextView
                    android:id="@+id/tv_community_guideline"
                    style="@style/title_regular"
                    android:paddingHorizontal="10dp"
                    android:background="@drawable/rounded_white_box"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center_vertical"
                    android:text="@string/community_guidelines" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"/>

                <TextView
                    android:id="@+id/tv_safety_tips"
                    style="@style/title_regular"
                    android:background="@drawable/rounded_white_box"
                    android:paddingHorizontal="10dp"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="20dp"
                    android:layout_height="40dp"
                    android:gravity="center_vertical"
                    android:text="@string/safety_tips" />

                <TextView
                    android:layout_marginVertical="10dp"
                    style="@style/title_bold"
                    android:text="@string/legal" />

                <TextView
                    android:id="@+id/tv_privacy_policy"
                    android:layout_width="match_parent"
                    style="@style/title_regular"
                    android:background="@drawable/rounded_white_box"
                    android:paddingHorizontal="10dp"
                    android:layout_height="40dp"
                    android:gravity="center_vertical"
                    android:text="@string/privacy_policy" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"/>

                <TextView
                    android:id="@+id/tv_term_services"
                    style="@style/title_regular"
                    android:paddingHorizontal="10dp"
                    android:background="@drawable/rounded_white_box"
                    android:layout_marginBottom="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center_vertical"
                    android:text="@string/terms_of_service" />



                <LinearLayout
                    android:layout_marginBottom="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="150dp"
                        android:layout_height="39dp"
                        android:src="@drawable/jobamax_logo_gradient" />

                    <TextView
                        style="@style/regular_subtext"
                        android:layout_marginTop="8dp"
                        android:text="@string/arg_version" />
                </LinearLayout>


                <TextView
                    android:id="@+id/tv_logout"
                    style="@style/title_regular"
                    android:background="@drawable/rounded_white_box"
                    android:paddingHorizontal="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center_vertical"
                    android:text="@string/log_out" />

            </LinearLayout>


        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>