<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@drawable/rounded_white_box"
        android:layout_marginHorizontal="30dp"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_jobamax_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:fontFamily="@font/opensans_bold"
            android:gravity="center"
            android:text="@string/do_you_want_to_delete_your_account"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView9" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_grey_box"
            android:hint="@string/re_enter_password"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView32" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText">

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                style="@style/title_bold"
                android:textColor="@color/colorPrimary"
                android:gravity="center"
                android:background="@drawable/rounded_white_box_sad_white_strok"
                android:padding="10dp"
                android:text="@string/cancel" />

            <TextView
                android:id="@+id/tv_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                style="@style/title_bold"
                android:padding="10dp"
                android:textColor="@color/white"
                android:background="@drawable/rounded_blue_box"
                android:gravity="center"
                android:text="@string/delete" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>