<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/rounded_white_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="18sp"
            android:layout_marginHorizontal="20dp"
            android:gravity="center"
            android:text="@string/are_you_selected"/>
        <View
            android:id="@+id/v_devider"
           app:layout_constraintTop_toBottomOf="@+id/tv_message"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/v_divider"/>
        <LinearLayout
            app:layout_constraintTop_toBottomOf="@+id/v_devider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_yes_btn"
                android:layout_weight="0.5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:paddingVertical="10dp"
                android:gravity="center"
                android:textSize="18sp"
                android:text="@string/yes"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                style="@style/v_divider"/>
            <TextView
                android:id="@+id/tv_no_btn"
                android:layout_weight="0.5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:paddingVertical="10dp"
                android:gravity="center"
                android:textSize="18sp"
                android:text="@string/no"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>